--- a/resources/assets/sass/modules/_loading.scss
+++ b/resources/assets/sass/modules/_loading.scss
@@ -28,7 +28,7 @@
     right: 0;
     width: 80px;
     margin: auto;
-    z-index: $zIndex1;
+    z-index: $zIndex5;
     font-size: 40px;
     color: #5bc0de;
     display: flex;
