--- a/resources/assets/sass/modules/lists/_favourites.scss
+++ b/resources/assets/sass/modules/lists/_favourites.scss
@@ -5,7 +5,7 @@
     top: 110px;
     margin: auto;
     right: 12px;
-    z-index: 9;
+    z-index: $zIndex2;
     max-width: 400px;
     li {
         cursor: pointer;
