--- a/resources/assets/sass/modules/lists/_filter.scss
+++ b/resources/assets/sass/modules/lists/_filter.scss
@@ -1,5 +1,6 @@
 #search-container {
     position: fixed;
+    z-index: $zIndex1;
     top: 47px;
     right: 10px;
     width: 230px;
