--- a/resources/assets/sass/modules/lists/popups/_popup.scss
+++ b/resources/assets/sass/modules/lists/popups/_popup.scss
@@ -6,7 +6,7 @@
 	width: 100%;
 	height: 100%;
 	background: rgba(0,0,0,.4);
-	z-index: $zIndex2;
+	z-index: $zIndex4;
 	display: flex;
 	justify-content: center;
 	align-items: center;
